--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/htmlheader.vm
@@ -6,16 +6,15 @@
 <?xml version="1.0" encoding="$xwiki.encoding" ?>
 ## TODO this should be more specific
 #if("$!request.noDoctype" != "true")
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 #end
-<html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.language" xml:lang="$xcontext.language">
+<html lang="$xcontext.language">
   <head>
     ## ---------------------------------------------------------------------------------------------------------------
     ## Ensure that the Content-Type meta directive is the first one in the header.
     ## See http://www.w3.org/International/tutorials/tutorial-char-enc/
     ## ---------------------------------------------------------------------------------------------------------------
-    <meta http-equiv="Content-Type" content="text/html; charset=$xwiki.encoding" />
+    <meta charset="$xwiki.encoding" />
     ## ---------------------------------------------------------------------------------------------------------------
     ## Compute the title.
     ## ---------------------------------------------------------------------------------------------------------------
