XWIKI-378: Provide a minimal skin designed for mobile devices
- Specify the viewport informing the browser to always render the page at 100%

--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/htmlheader.vm
@@ -16,6 +16,10 @@
     ## ---------------------------------------------------------------------------------------------------------------
     <meta charset="$xwiki.encoding" />
     ## ---------------------------------------------------------------------------------------------------------------
+    ## Mobile optimized: Set the viewport specifying how the content should fit on the device's screen 
+    ## ---------------------------------------------------------------------------------------------------------------
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    ## ---------------------------------------------------------------------------------------------------------------
     ## Compute the title.
     ## ---------------------------------------------------------------------------------------------------------------
     #if(!$title)
