XWIKI-1342: Create a new clean skin from scratch
- Centering #xwikimaincontainer

--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/style.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/style.css
@@ -1,1 +1,4 @@
+/* Legacy is a cleaned-up version of Colibri */
 @import "$xwiki.getSkinFile('legacy.css', true)#if ("$!{request.colorTheme}" != '')?colorTheme=${request.colorTheme}#end";
+/* Junco's specific rules */
+@import "$xwiki.getSkinFile('junco.css', true)#if ("$!{request.colorTheme}" != '')?colorTheme=${request.colorTheme}#end";
