--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/htmlheader.vm
@@ -108,5 +108,4 @@
 #end
 ## These elements will be closed in the htmlfooter.vm file
 <$bodyTagName id="body" class="wiki-${xcontext.database} space-${escapetool.xml($doc.space.replaceAll(' ', '_'))} ${bodyAction}body #if($showLeftPanels == "0")hideleft#end#if($showRightPanels == "0")hideright#end#if($hidecolumns && ($!hidecolumns == 1))hidelefthideright#end">
-<div id="xwikimaincontainer">
-<div id="xwikimaincontainerinner">
+<div id="xwikimaincontainer" class="container">
