--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
@@ -224,6 +224,15 @@ span.wikicreatelink a:after {
   color: $theme.textSecondaryColor;
 }
 
+.itemCount {
+  color: $theme.textSecondaryColor;
+}
+
+.noitems {
+  color: $theme.textSecondaryColor;
+  font-size: .9em;
+}
+
 /* ---------------------Columns--------------------------*/
 /* DEPRECATED: Duplicate of the grid system from Bootstrap */
 .column {
@@ -269,9 +278,7 @@ th.avatar {
 /* ----------------------Header--------------------------*/
 #headerglobal {
   background: $theme.pageHeaderBackgroundColor $!{theme.headerBackgroundImage} $!{theme.headerBackgroundPosition};
-  clear: both;
-  margin-bottom: 16px;
-  width: 100%;
+  margin-bottom: 16px; /* TODO */
 }
 
 #companylogo a img {
@@ -280,38 +287,28 @@ th.avatar {
 
 #globallinks {
   float: right;
-  padding: 8px 20px;
-  width: 190px;
-}
-
-.globalsearch {
-  text-align: right;
+  padding: 8px 20px; /* TODO */
 }
 
 .globalsearch input {
-  display: inline;
   vertical-align: middle;
 }
 
 .globalsearchinput {
-  min-height: 16px;
-  padding: 2px 18px 2px 2px;
-  width: 168px;
+  width: 168px; /* TODO */
 }
 
 .globalsearch input.button , .globalsearch input.button:hover{
   background-color: $theme.pageContentBackgroundColor;
   background-image: none;
   border: 0;
-  height: 16px;
   margin: 0 2px 0 -18px;
   padding: 0;
-  width: 16px;
 }
 
 #headerlanguages {
   display: block;
-  padding-top: 4px;
+  padding-top: 4px; /* TODO */
   text-align: right;
 }
 
@@ -320,8 +317,8 @@ th.avatar {
   border-radius: 4px;
   color: $theme.menuLinkColor;
   display: inline-block;
-  margin: 2px;
-  padding: 2px 4px;
+  margin: 2px; /* TODO */
+  padding: 2px 4px; /* TODO */
 }
 
 .language-current {
@@ -335,15 +332,12 @@ th.avatar {
 }
 
 /* ----------------------Content-------------------------*/
-#contentcontainer {
-  clear: both;
-}
-
 .leftsidecolumns, #contentcolumn {
   float: left;
   width: 100%;
 }
 
+/* TODO */
 .main {
   margin: 0 200px;
   padding: 0 25px 25px;
@@ -377,12 +371,6 @@ th.avatar {
   width: 100%;
 }
 
-.wiki-code {
-  width: 100%;
-  height: 300px;
-  overflow: auto;
-}
-
 /* -----------------Top Doc Information------------------*/
 #hierarchy {
   font-size: 90%;
@@ -391,9 +379,6 @@ th.avatar {
 
 #document-title h1 {
   font-size: 2.15em;
-  letter-spacing: -1px;
-  margin: 0;
-  padding: 5px 0;
 }
 
 #document-info {
@@ -412,7 +397,6 @@ th.avatar {
 /* ---------------Bottom Doc Information------------------*/
 #xdocFooter {
   background-color: $theme.pageContentBackgroundColor;
-  border-top: 1px solid $theme.borderColor;
   color: $theme.textPrimaryColor;
   font-size: 90%;
   overflow: auto;
@@ -421,22 +405,12 @@ th.avatar {
 }
 
 #xdocAuthors {
-  padding: 3px 0;
   text-align: right;
 }
 
 /* --------------------Doc Extra Tabs--------------------*/
-#docextraanchors {
-  height: 2em;
-}
-
-.active .itemCount, .itemCount {
-  color: $theme.textSecondaryColor;
-}
-
 #docextrapanes {
   background-color: $theme.pageContentBackgroundColor;
-  border: none;
   overflow: auto;
   padding: 20px 25px 10px;
 }
@@ -448,28 +422,18 @@ th.avatar {
 
 .xwikiintracontent legend {
   color: $theme.titleColor;
-  font: 700 1.2em / 1.4em sans-serif;
-  letter-spacing: .1em;
-}
-
-.noitems {
-  color: $theme.textSecondaryColor;
-  font-size: .9em;
+  font-size: 1.2em;
+  font-weight: 700;
+  letter-spacing: 0.1em;
 }
 
 /* -----------------Tabs------------------*/
 ul.xwikitabbar {
-  background-color: $theme.menuBackgroundColor;
   margin: 0;
   padding: 3px 0 0 15px;
 }
-
 .xwikitabbar li {
   display: inline-block;
-  height: 20px;
-  line-height: 20px;
-  list-style-type: none;
-  margin-right: 5px;
 }
 
 .xwikitabbar li a, .xwikitabbar li a:visited, .xwikitabbar li a:active{
@@ -477,7 +441,6 @@ ul.xwikitabbar {
   display: inline-block;
   font-size: .8em;
   font-weight: 700;
-  height: 20px;
   line-height: 20px !important;
   padding: 0 10px;
   text-transform: uppercase;
@@ -488,7 +451,6 @@ ul.xwikitabbar {
   color: $theme.menuSelectedEntryLinkColor;
   cursor: default;
   text-decoration: none;
-  text-shadow: none;
 }
 
 /* ----------------History----------------*/
@@ -496,24 +458,14 @@ ul.xwikitabbar {
   background-color: $theme.highlightColor;
 }
 
-#historyform  th {
-  border: 0;
-  border-bottom: 1px solid $theme.borderColor;
+#historyform th {
   font-size: .8em;
-  padding: 3px 4px;
   text-transform: uppercase;
 }
 
-#historyform td{
-  border: 0;
-  border-bottom: 1px solid $theme.borderColor;
+#historyform td {
   color: $theme.textPrimaryColor;
   font-size: .85em;
-  padding: 3px 4px;
-}
-
-div.buttonwrapper {
-  display: inline;
 }
 
 /* ----------------Changes----------------*/
@@ -524,13 +476,14 @@ div.buttonwrapper {
   text-align: center;
   position: relative;
 }
+
 /* Create a theme-able arrow using CSS generated divs */
-/* Special rules for IE6/7 in ie-all.css */
 #changes-info:before, #changes-info:after {
   content: "";
   display: block;
   position: absolute;
 }
+
 #changes-info:before {
   top: 3em;
   right: 50%;
@@ -538,6 +491,7 @@ div.buttonwrapper {
   height: 2em;
   background: $theme.pageContentBackgroundColor;
 }
+
 #changes-info:after {
   top: 2em;
   left: 50%;
@@ -553,9 +507,7 @@ div.buttonwrapper {
   position: relative;
   z-index: 1;
 }
-#changes-info-boxes * {
-  line-height: 1.4em;
-}
+
 #changes-info-box-from {
   float: left;
   width: 49%;
@@ -564,7 +516,6 @@ div.buttonwrapper {
 #changes-info-box-to {
   margin-left: 51%;
 }
-/* Special rule for IE7 in ie-all.css */
 
 .changes-info-title {
   font-size: 1.4em;
@@ -591,7 +542,6 @@ div.buttonwrapper {
 }
 
 #footerglobal {
-  clear: both;
   color: $theme.textPrimaryColor;
   font-size: .7em;
   margin: 0 225px;
@@ -1286,6 +1236,7 @@ div#xwikiobjects input[type="checkbox"], div#xwikiclassproperties input[type="ch
   * Button elements different containers
 -------------------------------------------------------------- */
 .buttonwrapper {
+  display: inline;
   margin: 5px 5px 0 0;
 }
 .buttonwrapper .button {
