--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
@@ -699,33 +699,12 @@ ul.xwikitabbar {
 -------------------------------------------------------------- */
 
 /* Menus z-indexes */
-#mainmenu, #mainmenu.submenu, #maineditmenu, #maineditmenu.submenu {
+#mainmenu, #mainmenu.submenu {
   z-index: 1000;
 }
 
 #contentmenu, #contentmenu.submenu, #contenteditmenu, #contenteditmenu.submenu {
   z-index: 999;
-}
-
-/* Main menu */
-#mainmenu {
-  min-width: 970px;
-  overflow: visible;
-}
-
-/* Main edit menu */
-#maineditmenu {
-  color: $theme.menuLinkColor;
-  text-align: center;
-}
-
-#maineditmenu a {
-  display: inline;
-  float: none;
-}
-
-#maineditmenu .topmenuentry , #maineditmenu .tmetype {
-  float: none;
 }
 
 /* General */
@@ -789,7 +768,7 @@ ul.xwikitabbar {
   display: block;
 }
 
-.tmetype{
+.tmetype {
   color: $theme.menuLinkColor;
   float: left;
   font: normal normal 700 0.8em/1.8em sans-serif;
@@ -824,7 +803,7 @@ ul.xwikitabbar {
   text-transform: uppercase;
 }
 
-.actionmenu a:link, .actionmenu a:visited  {
+.actionmenu a:link, .actionmenu a:visited {
   cursor: pointer;
 }
 
@@ -879,7 +858,7 @@ ul.xwikitabbar {
   position: relative;
 }
 
-.actionmenu .tmCreate a.tme, .tmCreate .menuarrow  {
+.actionmenu .tmCreate a.tme, .tmCreate .menuarrow {
   color: $theme.menuAddEntryLinkColor;
 }
 
@@ -1031,6 +1010,7 @@ ul.xwikitabbar {
 .actionmenu .tmWikiDocumentIndex, .actionmenu .tmSpaceDocumentIndex {
   background-image: url("$xwiki.getSkinFile('icons/silk/book_open.png')");
 }
+
 .actionmenu .tmUserNetwork {
   background-image: url("$xwiki.getSkinFile('icons/silk/group.png')");
 }
@@ -1062,10 +1042,12 @@ ul.xwikitabbar {
   #css_textShadow('0', '1px', '0', $theme.menuContentGradientColor)
   width: 100%;
 }
+
 .floating-menu:hover:after {
   content: "";
   display: none;
 }
+
 /* @group FORMS */
 /* --------------------------------------------------------------
   * forms components
