--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
@@ -44,10 +44,6 @@ li > dl, dt > dl, dd > dl {
   margin-left: 2em;
 }
 
-label {
-  font-weight: 400;
-}
-
 /* @group COLORTHEME */
 /* --------------------------------------------------------------
   * ColorTheme variable calls
@@ -693,6 +689,12 @@ ul.xwikitabbar {
   font-weight: 400;
 }
 
+/* --------------DocumentInfo Panel----------------------*/
+.DocumentInformation input#xhidden {
+  width: auto;
+  margin-right: 0.5em;
+}
+
 /* @group MENU */
 /* --------------------------------------------------------------
   * Action Menu elements
@@ -1275,6 +1277,7 @@ input.icon-button {
   list-style-type: none;
   margin: 0;
 }
+
 .vertical-menu ul ul ul {
   margin-left: 2em;
 }
@@ -1309,6 +1312,7 @@ input.icon-button {
   font-weight: 700;
   font-variant: small-caps;
 }
+
 .vertical-menu .group * {
   color: $theme.menuContentLinkColor;
 }
@@ -1317,6 +1321,7 @@ input.icon-button {
 .vertical-menu span:hover {
   background-color: $theme.highlightColor;
 }
+
 .vertical-menu .group:hover {
   background-color: $theme.menuBackgroundColor;
   #css3_backgroundLinearGradient({
@@ -1327,6 +1332,7 @@ input.icon-button {
     ]
   })
 }
+
 .vertical-menu .group:hover * {
   color: $theme.menuLinkColor;
 }
@@ -1336,6 +1342,7 @@ input.icon-button {
   background-color: $theme.highlightColor;
   font-weight: bold;
 }
+
 .vertical-menu .current-group {
   background-color: $theme.menuBackgroundColor;
   #css3_backgroundLinearGradient({
@@ -1347,6 +1354,7 @@ input.icon-button {
   })
   color: $theme.menuLinkColor;
 }
+
 .vertical-menu .current-group *, .vertical-menu .current-group *:visited, .vertical-menu .current-group *:active {
   color: $theme.menuLinkColor;
 }
@@ -1362,10 +1370,12 @@ input.icon-button {
   right: -10px;
   top: 0%;
 }
+
 .vertical-menu .current a:after {
   border-left-color: $theme.borderColor;
   right: -11px;
 }
+
 .vertical-menu .current-group:after {
   border-left-color: $theme.menuBackgroundColor !important;
 }
@@ -1427,9 +1437,11 @@ h1.xwikipaneltitle {
   overflow: hidden;
   padding: 10px 15px;
 }
+
 .xwikipanelcontents * {
   line-height: 1.6em;
 }
+
 .collapsed h1.xwikipaneltitle {
   background-color: $theme.panelCollapsedBackgroundColor;
   border: 0;
@@ -1437,18 +1449,6 @@ h1.xwikipaneltitle {
 }
 
 .collapsed .xwikipanelcontents {
-  display: none;
-}
-
-.panelitem {
-  display: block;
-  overflow: hidden;
-  word-wrap: break-word;
-  padding-left: 1em;
-  text-indent: -1em;
-}
-
-.pitemseparator {
   display: none;
 }
 
@@ -1468,14 +1468,14 @@ h1.xwikipaneltitle {
   text-transform: uppercase;
 }
 
-.panel input, .panel select , .panel dt , .panel table, .padded label{
+.panel input, .panel select , .panel dt , .panel table, .padded label {
   font-size: .95em;
   margin: 0;
   padding: 0;
   width: 100%;
 }
 
-.panel dd, .panel .padded{
+.panel dd, .panel .padded {
   padding: 0 0 .5em;
 }
 
@@ -1484,22 +1484,12 @@ h1.xwikipaneltitle {
   text-transform: uppercase;
 }
 
-.DocumentInformation table td {
-  border-top: 1px dotted $theme.borderColor;
-}
-
-.DocumentInformation input#xhidden {
-  width: auto;
-  margin-right: 0.5em;
-}
-
 /* @group CONTAINERS GENERAL STYLING */
 /* --------------------------------------------------------------
   * General rules that applied to different types of containers
 -------------------------------------------------------------- */
 /* -------------- Containers borders -----------------*/
 #contentmenu, #editmenu,
-.xwikipanelcontents, h1.xwikipaneltitle,
 #mainContentArea, #mainEditArea,
 #xdocFooter,
 #docextrapanes, ul.xwikitabbar {
@@ -1773,10 +1763,6 @@ div.floatinginfobox {
   float: right;
   margin: .66em 0 1em 1em;
   padding: 10px;
-}
-
-#mainContentArea .centered {
-  text-align: center;
 }
 
 fieldset.xwikimessage {
