XWIKI-1342: Create a new clean skin from scratch - Cleaning legacy.css: better commenting, repositioning - junco.css: overriding usage of .label inside User Profile

--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/junco.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/junco.css
@@ -28,3 +28,12 @@
   margin-bottom: inherit;
   margin-top: inherit;
 }
+
+/* Bad usage of a class that has meaning inside Bootstrap */
+/* Example: User Profile */
+.user-page-pane .label {
+  display: inherit;
+  font-size: inherit;
+  padding: inherit;
+  text-align: inherit;
+}
