--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/junco.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/junco.css
@@ -1,19 +1,13 @@
 #template('colorThemeInit.vm')
-/* @group LAYOUT - GENERAL */
-/* --------------------------------------------------------------
-  * General layout elements
--------------------------------------------------------------- */
+/* Redirecting the responsability of background-color to body, because of .container usage  */
 #body {
   background: $theme.pageBackgroundColor $!{theme.pageBackgroundImage} $!{theme.pageBackgroundPosition};
 }
 
-/* @group LAYOUT - VIEW */
-/* --------------------------------------------------------------
-  * Layout elements in view mode
--------------------------------------------------------------- */
+/* Overwriting Bootstrap value */
+/* Example: Document footer Add Attach or Comment zone */
 .xwikiintracontent legend {
   border: none;
-  margin: 0;
 }
 
 /* Bad usage of a class that has meaning inside Bootstrap */
@@ -23,17 +17,24 @@
 }
 
 /* Bad usage of a class that has meaning inside Bootstrap */
-/* Example: History table */
+/* Example: History table or any other livetable */
 .paginationFilter .pagination {
   margin-bottom: inherit;
   margin-top: inherit;
 }
 
 /* Bad usage of a class that has meaning inside Bootstrap */
-/* Example: User Profile */
+/* Example: User Profile labels */
 .user-page-pane .label {
   display: inherit;
   font-size: inherit;
   padding: inherit;
   text-align: inherit;
+}
+
+/* Bad usage of a class that has meaning inside Bootstrap */
+/* Example: Blog Post footer */
+.entry-footer address {
+  display: inline;
+  margin: 0;
 }
