--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
@@ -524,6 +524,11 @@ ul.xwikitabbar {
   padding: 1.5em 0 1em;
 }
 
+/* --------------View Source--------------*/
+.wiki-code {
+  width: 100%;
+}
+
 /* --------------Information--------------*/
 #informationcontent dd {
   padding: 0 1em 1em;
