XWIKI-1342: Colibri theme - Mapping XWiki classes to Bootstrap (buttons) - Removed duplicated after https://github.com/evalica/bootswatch/commit/56eeef4bb490652e091cc33ef96d16a8f597b77f

--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/style.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/style.css
@@ -1,4 +1,5 @@
-@import url('//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css');
+/*@import url('//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css');*/
+@import "$xwiki.getSkinFile('themes/colibri/bootstrap.min.css', true)";
 /*@import url('//bootswatch.com/amelia/bootstrap.min.css');*/
 /*@import "$xwiki.getSkinFile('themes/default/bootstrap.min.css', true)";*/
 @import "$xwiki.getSkinFile('legacy.css', true)#if ("$!{request.colorTheme}" != '')?colorTheme=${request.colorTheme}#end";
